--- a/src/pages/play.astro
+++ b/src/pages/play.astro
@@ -25,6 +25,7 @@ import { strudelPatterns } from "../data/strudel-patterns";
 						title={pattern.title}
 						description={pattern.description}
 						bpm={pattern.bpm}
+						strudelUrl={pattern.strudelUrl}
 					/>
 				</div>
 			))}
